# LosPollosHermanosPy

./: .env.exmaple  .gitattributes  Dockerfile  README.md  deploy.sh  docker-compose.yml  main.py  migrate.py  pyproject.toml  temp.py
.github/workflows/: deploy.yml
app/: __init__.py  db.py  errors.py  location.py  menu.py  schema.sql
app/db/: __init__.py
app/menu/: model.py  service.py  view.py
app/models/: __init__.py  combo.py  dish.py  employee.py  image.py  ingredient.py  store.py  supplier.py  utils.py
app/seeds/: combo.json  dish.json
app/services/: __init__.py  combo.py  dish.py  employee.py  image.py  ingredient.py  store.py  supplier.py  utils.py
app/views/: __init__.py  combo.py  dish.py  employee.py  errors.py  image.py  ingredient.py  location.py  menu.py  store.py  supplier.py
seeds/: combo.json  dish.json  employee.json  store.json  supplier.json
static/css/: location.css  menu.css  storeInfo.css  style.css
static/js/: location.js  storeInfo.js
templates/: 404.html  500.html  base.html  delete-item.html  index.html  location.html  menu.html  saved.html
templates/combo/: add.html  detail.html  edit.html
templates/components/: footer.html  header.html  model.html
templates/dish/: add.html  detail.html  edit.html
templates/employee/: add.html  detail.html  edit.html  list.html
templates/errors/: 400.html  404.html  405.html  418.html  500.html  501.html
templates/ingredient/: detail.html  list.html
templates/menu/: cards.html  edit-dish.html  list.html  menu.html
templates/store/: add.html  detail.html  edit.html  list.html  (+1 more)
(+10 files in other folders)
