[project]
name = "lospolloshermanos"
version = "0.1.0"
description = "Los Pollos Hermanos"
authors = [
    {name = "YuanOwO",email = "yuan@yuanowo.xyz"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "pillow (>=12.0.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
