[project]
name = "lospolloshermanos"
version = "0.1.0"
description = "Los Pollos Hermanos"
authors = [{ name = "YuanOwO", email = "yuan@yuanowo.xyz" }]
requires-python = ">=3.12"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = false
